# dhcrypto

./: aes.go  aes_test.go  cipher.go  cipher_jni.go  cipher_test.go  error.go  go.mod  rsa.go  rsa_test.go
cipher/: cipher.go  readme.md
jni/: CMakeLists.txt  cipher_jni.go  crypto.h  main.c  readme.md
jni/decode/: CMakeLists.txt  decode.c  main.c
test_key/: p.p12  private.pem  rsa.crt  rsa.csr  rsa.der
